syntax = "proto3";

option csharp_namespace = "MSP.Profile.Service";

service GrpcCoupon {
	rpc GetCouponDetails (CouponDetailsRequest) returns (CouponDetailsResponse);
}

message CouponDetailsRequest {
	string id =  1;
}

message CouponDetailsModel {
	string coupon_number = 1;
}

message CouponDetailsResponse {
	repeated CouponDetailsModel coupons = 1;
}

